# apple_stock_ml

./: .gitignore  README.md  pyproject.toml  senior_ml_assignment_ai2c.ipynb
apple_stock_ml/: __init__.py
apple_stock_ml/src/: __init__.py  data_preprocessing.py  improvement.py  model_validation.py  random_forest.py  temporal_cnn.py
apple_stock_ml/src/utils/: __init__.py  logger.py  visualizer.py
evaluation_results/: run_metrics.json  summary_report.json
tests/: test_data_preprocessing.py  test_random_forrest.py
